# Downsampler

./: .gitignore  .gitmodules  CMakeLists.txt  Downsampler.jucer  LICENSE.txt  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
Builds/VisualStudio2022/: Downsampler.sln  Downsampler_SharedCode.vcxproj  Downsampler_SharedCode.vcxproj.filters  Downsampler_StandalonePlugin.vcxproj  Downsampler_VST3.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginProcessor.cpp  PluginProcessor.h
src/: DownsamplerAudioProcessor.cpp  DownsamplerAudioProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
